Improve adaptive discovery and viewing experience
